Fix java build